# aoe_playerbase_stats

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  Pipfile  Readme.md  TODO.md  cog.toml  common.py  data_collector.py  data_processor.py  index.html  main.py  manage.py  plot.py  plot_panda.py  plot_pd.py  pyproject.toml  scrape.py  setup.cfg  setup.py  test.py  update_data.py
.github/workflows/: gh-pages-daily.yml  gh-pages.yml  update_data.yml
aoe-playerbase-stats/: __init__.py  __main__.py  data_analysing.py  data_collecting.py  data_processing.py  plotting.py
aoe-playerbase-stats/data/: test.json
aoe-playerbase-stats/util/: __init__.py  common.py  data_analyser.py  data_processor.py  dataframes.py  dataset.py  decorators.py
aoe_playerbase_stat/: __main__.py  data_analysing.py  data_collecting.py  data_processing.py  plotting.py
aoe_playerbase_stat/data/: dataframe.br.parq  dataset.json
aoe_playerbase_stat/data_temp/: aoc_ref_data.json
aoe_playerbase_stat/utils/: data_analyser.py  data_processor.py  dataframes.py  decorators.py  error.py  shared.py
aoe_playerbase_stats/: __init__.py  cli.py
aoe_playerbase_stats/commons/: settings.py  shared.py
data/: aoe-leaderboards.yaml  dataframe.br.parq  dataset.json  event_data.json  leaderboard_data.json
notebook/: AoE Playerbase Analysation.ipynb
notebooks/: AoE Playerbase Analysation.ipynb
scripts/: common.py  data_analysing.py  data_collecting.py  data_collector.py  data_processing.py  data_processor.py  dataframes.py  plotting.py  update_data.py
tests/: test_aoe_playerbase_stats.py
(+25 files in other folders)
