[metadata]
name = aoe_playerbase_stat
version = 0.3.1
description=Playerbase stats on AoE2:DE, AoE3:DE and AoE4 leaderboards
author=simonsan
author_email=simonsan@systemli.org
url=https://github.com/simonsan/aoe_playerbase_stats

[options]
packages = find:
install_requires =
    bokeh >= 2.4.2
    aiohttp >= 3.8.1
    pycountry >= 22.1.10
    pandas >= 1.4.0
    pyarrow >= 6.0.1

[options.entry_points]
console_scripts =
    main = aoe_playerbase_stat:main
